Refactor some code in media player